# chorebot

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  config.ini  main.py  pyproject.toml  readme.md  requirements.in  requirements.txt  setup.py
chorebot/: cache.py  chores.py  config.py  entry.py  gamify.py  log.py  main.py  trello.py
chorebot/test/: chores_test.py
